tests/transpiler/x/cpp/json_builtin.cpp
// Generated by Mochi transpiler v0.10.32 on 2025-07-21 11:14:37 GMT+7
#include <iostream>
#include <string>
#include <map>

std::map<auto, int> m = std::map<auto, int>{{a, 1}, {b, 2}};

int main() {
    json(m);
    return 0;
}
